--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,15 @@ cmake_minimum_required(VERSION 2.8)
 
 project(ARM_VO)
 
-SET(CMAKE_BUILD_TYPE Release)
+# SET(CMAKE_BUILD_TYPE Release)
 
 if (${CROSS_ENABLE} MATCHES "ON")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -O3 -std=c++11 -mfpu=neon -mfloat-abi=hard -funroll-loops -Ofast")
 else()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -O3 -std=c++11 -msse4.2 -funroll-loops -Ofast")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -O3 -std=c++11 -msse4.2")
 endif()
 
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 if(NOT OpenCV_FOUND)
     message(FATAL_ERROR "OpenCV not found.")
 endif()
